--- a/src/assets/common/reset.css
+++ b/src/assets/common/reset.css
@@ -56,8 +56,4 @@ table { border-collapse: collapse; border-spacing: 0; }
 .ks-clear, .clear {
   *zoom: 1;
 
---------------------- 
-作者：夜空下的微笑 
-来源：CSDN 
-原文：https://blog.csdn.net/weixin_41014370/article/details/79523637 
-版权声明：本文为博主原创文章，转载请附上博文链接！
+}
