添加弹出校验

--- a/src/assets/css/blogHeader.css
+++ b/src/assets/css/blogHeader.css
@@ -14,5 +14,5 @@
 .navBar li a:hover{color: #ff8a04;}
 
 /*清除苹果默认样式*/
-input[type="button"], input[type="submit"], input[type="reset"] {-webkit-appearance: none;}
+input[type="button"], input[type="text"], input[type="submit"], input[type="reset"] {-webkit-appearance: none;}
 textarea {  -webkit-appearance: none;}
