--- a/src/assets/css/blogHeader.css
+++ b/src/assets/css/blogHeader.css
@@ -8,9 +8,9 @@
 .logo-b img {width: 100%;}
 .navBar {display: inline-block;padding: 0;width: auto;margin-left: 12px;}
 .navBar li {margin: 26px 0;padding: 0;list-style: none;float: left;}
-.navBar li a {text-decoration: none;position: relative;display: block;height: 42px;line-height: 42px;color: #2c2950;font-size: 18px;padding: 0 25px;}
+.navBar li a {text-decoration: none;position: relative;display: block;height: 42px;line-height: 42px;color: #2c2950;font-size: 18px;padding: 0 15px; margin-left: 15px;}
 .router-link-active span {color: #ff8a04;}
-.router-link-active span:after {position: absolute;left: 42px;bottom: -2px;content: "";height: 0;width: 35px;border-bottom: 3px solid #ff8a04;color: #ff8a04;}
+.router-link-active span:after {position: absolute;left: 0;bottom: -2px;content: "";height: 0;width: 100%;border-bottom: 2px solid #ff8a04;color: #ff8a04;}
 .navBar li a:hover{color: #ff8a04;}
 
 /*清除苹果默认样式*/
