--- a/src/assets/css/blogHeader.css
+++ b/src/assets/css/blogHeader.css
@@ -1,5 +1,5 @@
 /* 导航样式 */
-.nav {background: #fff;width: 100%;position: fixed;left: 0;top: 0;z-index: 12;height: 96px;}
+.nav {background: #fff url("./../images/wlb10.png")  repeat-x bottom;width: 100%;position: fixed;left: 0;top: 0;z-index: 12;height: 96px;}
 .nav:after {box-sizing: border-box;content: "";position: absolute;left: 0;right: 0;bottom: 0;border-bottom: 1px solid rgba(187, 187, 187, 0.2);box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);box-sizing: border-box;}
 .nav .navCont {width: 1176px;margin: 0 auto;height: 96px;padding: 0 12px;}
 .navCenter {display: inline-block;width: 100%;}
